<?xml version="1.0" encoding="utf-8"?>


<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.lalocal.lalocal.view.LCustomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:l_titleVisible="true"
        app:l_des="@string/set_password_by_ver_code"
        app:l_title="@string/forget_psw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_phone_edit_top"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:cozntext="com.lalocal.lalocal.activity.LoginActivity">
            <com.lalocal.lalocal.view.MyEditText
                android:id="@+id/forgetpsw_veritifiedcode_custom_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:my_title="@string/ver_code"
                app:hint="@string/input_verification_code" />

            <com.lalocal.lalocal.view.MyEditText
                android:id="@+id/forgetpsw_lastest_psw_custom_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_half_dp"
                app:is_password="true"
                app:my_maxLen="20"
                app:my_title="@string/password"
                app:hint="@string/input_latest_psw" />

            <!--<Button-->
                <!--android:id="@+id/forgetpsw_sure_btn"-->
                <!--android:text="@string/sure"-->
                <!--style="@style/LoginNextStyle"-->
                <!--/>-->

        <com.lalocal.lalocal.view.ProgressButton
            android:id="@+id/forgetpsw_sure_btn"
            app:pb_text="@string/sure"
            app:isOrangeBg="false"
            style="@style/PbNextStyle"
            />
    </LinearLayout>

</merge>