<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lalocal.lalocal.me.LRegister2Activity">
    <com.lalocal.lalocal.view.LCustomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:l_title="@string/set_pssword"
        app:l_titleVisible="true"
        app:l_des="@string/we_have_send_email_to_you"
        />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <com.lalocal.lalocal.view.MyEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_phone_edit_top"
            app:hint="@string/set_your_password"
            app:is_password="true"
            app:my_title="@string/password"
            android:id="@+id/lregister_set_password"
            />
        <com.lalocal.lalocal.view.MyEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hint="@string/set_your_nickname"
            android:layout_marginTop="@dimen/dimen_size_half_dp"
            android:id="@+id/lregister_set_nickname"
            app:my_title="@string/nickname"
            />

        <!--<Button-->
            <!--android:id="@+id/lregister_next"-->
            <!--android:layout_width="@dimen/login_phone_edit_width"-->
            <!--android:layout_height="@dimen/login_phone_edit_height"-->
            <!--android:layout_below="@+id/lregister1_input_email"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="@dimen/dimen_size_10_dp"-->
            <!--android:background="@color/black_99"-->
            <!--android:text="@string/enter"-->
            <!--android:textColor="@color/color_f0a028"-->
            <!--android:textSize="@dimen/text_size_18_sp" />-->



        <com.lalocal.lalocal.view.ProgressButton
            android:id="@+id/lregister_next"
            android:layout_width="@dimen/login_phone_edit_width"
            android:layout_height="@dimen/login_phone_edit_height"
            android:layout_below="@+id/lregister1_input_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_size_10_dp"
            app:isOrangeBg="false"
            app:pb_text="@string/enter"
            />
    </LinearLayout>



</merge>
