<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.lalocal.lalocal.view.LCustomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:l_des="@string/we_will_send_ver_code_to_your_email"
        app:l_title="@string/forget_psw"
        app:l_titleVisible="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activity.PasswordForget1Activity">

        <com.lalocal.lalocal.view.MyEditText
            android:id="@+id/forgetpsw_email_custom_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270.5dp"
            app:hint="@string/input_email" />

        <Button
            android:id="@+id/forgetpsw_next_btn"
            style="@style/LoginNextStyle"
            android:text="@string/next" />

    </LinearLayout>

</merge>
