<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_lregister"
    tools:context="com.lalocal.lalocal.me.LRegisterActivity">
    <com.lalocal.lalocal.view.LCustomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:l_title="@string/reigister_new_account"
        app:l_des="@string/give_you_one_diferent_world"
        />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <com.lalocal.lalocal.view.MyEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_emial_custom_edit_top"
            app:hint="@string/set_your_password"
            app:is_password="true"
            />
        <com.lalocal.lalocal.view.MyEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hint="@string/set_your_nickname"
            android:layout_marginTop="@dimen/dimen_size_half_dp"
            />
    </LinearLayout>



</merge>
