<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lalocal.lalocal.me.LRegister2Activity">

    <com.lalocal.lalocal.view.LCustomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:l_titleVisible="true"
        app:l_des="@string/give_you_one_diferent_world"
        app:l_title="@string/reigister_new_account" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lalocal.lalocal.view.MyEditText
            android:id="@+id/lregister1_input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_emial_custom_edit_top"
            app:hint="@string/input_email"
            app:my_title="@string/email"
            app:clearEanble="true"
            />

        <!--<Button-->
            <!--android:id="@+id/lregister1_next"-->
            <!--android:layout_width="@dimen/login_phone_edit_width"-->
            <!--android:layout_height="@dimen/login_phone_edit_height"-->
            <!--android:layout_below="@+id/lregister1_input_email"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="@dimen/dimen_size_10_dp"-->
            <!--android:background="@color/black_99"-->
            <!--android:text="@string/next"-->
            <!--android:textColor="@color/color_f0a028"-->
            <!--android:textSize="@dimen/text_size_18_sp" />-->

        <com.lalocal.lalocal.view.ProgressButton
            android:id="@+id/lregister1_next"
            android:layout_width="@dimen/login_phone_edit_width"
            android:layout_height="@dimen/login_phone_edit_height"
            android:layout_below="@+id/lregister1_input_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_size_10_dp"
            app:isOrangeBg="false"
            app:pb_text="@string/next"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/lregister1_next"
            android:layout_below="@+id/lregister1_next"
            android:layout_marginTop="@dimen/dimen_size_3_dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_register_show_you_argee"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12_sp" />

            <TextView
                android:id="@+id/lregister1_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12_sp" />


        </LinearLayout>


    </RelativeLayout>


</merge>
