<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lpassword_modify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lalocal.lalocal.me.LPasswordModifyActivity">

    <com.lalocal.lalocal.view.CustomTitleView
        android:id="@+id/lpsw_modify_ctv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_name="@string/modify_psw" />

    <Button
        android:id="@+id/lpswmodify_sendver_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_btn_height"
        android:layout_below="@+id/lpsw_modify_ctv"
        android:layout_marginLeft="@dimen/dimen_size_12_dp"
        android:layout_marginRight="@dimen/dimen_size_12_dp"
        android:layout_marginTop="@dimen/dimen_size_25_dp"
        android:background="@drawable/orange_corner_btn_bg"
        android:text="@string/send_email_vercode"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18_sp"
        />

    <LinearLayout
        android:id="@+id/lpswmodify_sure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lpsw_modify_ctv"
        android:layout_marginLeft="@dimen/dimen_size_12_dp"
        android:layout_marginRight="@dimen/dimen_size_12_dp"
        android:layout_marginTop="@dimen/dimen_size_25_dp"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <com.lalocal.lalocal.view.CustomEditText
            android:id="@+id/lpswmodify_input_vercode_edit"
            style="@style/CustomEditTextTheme"
            app:text_hint="@string/please_input_vercode_email" />

        <com.lalocal.lalocal.view.CustomEditText
            android:id="@+id/lpswmodify_input_psw_edit"
            style="@style/CustomEditTextTheme"
            android:layout_marginTop="@dimen/dimen_size_15_dp"
            app:isPsw="true"
            app:maxLen="20"
            app:text_hint="@string/please_input_password" />

        <Button
            android:id="@+id/lpswmodify_sure_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_btn_height"
            android:layout_below="@+id/lpsw_modify_ctv"
            android:layout_marginTop="@dimen/dimen_size_15_dp"
            android:background="@drawable/orange_corner_btn_bg"
            android:text="@string/sure_modify"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18_sp"
            />

    </LinearLayout>


</RelativeLayout>
