<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.lalocal.lalocal.view.LCustomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:l_title="@string/welcome_to_back"
        app:l_des="@string/give_you_one_diferent_world"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >



        <com.lalocal.lalocal.view.MyEditText
            android:id="@+id/login_emial_custom_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:my_title="@string/email"
            android:layout_marginTop="@dimen/login_emial_custom_edit_top"
            app:hint="@string/input_email" />

        <com.lalocal.lalocal.view.MyEditText
            android:id="@+id/login_psw_custom_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_half_dp"
            app:my_maxLen="20"
            app:is_password="true"
            app:hint="@string/input_psw" />
        <FrameLayout
            android:layout_width="@dimen/login_phone_edit_width"
            android:layout_height="wrap_content"
            >
        <TextView
            android:id="@+id/login_forget_psw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/color_fa"
            android:layout_marginTop="@dimen/dimen_size_6_dp"
            android:textSize="@dimen/text_size_12_sp" />
        </FrameLayout>
        <Button
            android:id="@+id/login_btn"
            android:text="@string/enter"
            style="@style/LoginNextStyle"
            />
        <com.lalocal.lalocal.view.ShapeTextView
            android:id="@+id/login_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            app:stroke_width="@dimen/dimen_size_1_dp"
            app:stroke_color="@color/white"
            android:textColor="@color/white"
            android:paddingTop="@dimen/dimen_size_5_dp"
            android:paddingBottom="@dimen/dimen_size_5_dp"
            android:paddingLeft="@dimen/dimen_size_30_dp"
            android:paddingRight="@dimen/dimen_size_30_dp"
            android:layout_marginTop="@dimen/dimen_size_10_dp"
            android:textSize="@dimen/text_size_15_sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_10_dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                style="@style/CommonD9LineTheme"
                android:layout_width="@dimen/dimen_size_100_dp"
                android:background="@color/color_40_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_size_15_dp"
                android:layout_marginRight="@dimen/dimen_size_15_dp"
                android:text="@string/other_login_way"
                android:textColor="@color/color_40_white"
                android:textSize="@dimen/text_size_14_sp" />

            <View
                style="@style/CommonD9LineTheme"
                android:layout_width="@dimen/dimen_size_100_dp"
                android:background="@color/color_40_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_other_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_10_dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/login_qq_btn"
                android:layout_width="@dimen/dimen_size_44_dp"
                android:layout_height="@dimen/dimen_size_44_dp"
                android:background="@drawable/ic_qq_logo" />

            <Button
                android:id="@+id/login_wechat_btn"
                android:layout_width="@dimen/dimen_size_44_dp"
                android:layout_height="@dimen/dimen_size_44_dp"
                android:layout_marginLeft="@dimen/dimen_size_40_dp"
                android:background="@drawable/ic_wechat_logo" />

            <Button
                android:id="@+id/login_weibo_btn"
                android:layout_width="@dimen/dimen_size_44_dp"
                android:layout_height="@dimen/dimen_size_44_dp"
                android:layout_marginLeft="@dimen/dimen_size_40_dp"
                android:background="@drawable/ic_weibo_logo" />

        </LinearLayout>

    </LinearLayout>


</merge>