<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50_dp"
        android:text="@string/select_sex"
        android:textSize="@dimen/text_size_14_sp"
        android:textColor="@color/color_b3"
        android:gravity="center"
        />
    <View
        style="@style/CommonD9LineTheme"
/>

    <TextView
        android:id="@+id/sex_selector_man_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50_dp"
        android:text="@string/man"
        android:gravity="center"
        android:textSize="@dimen/text_size_16_sp"
        android:textColor="@color/color_66"
      />

    <View
        style="@style/CommonD9LineTheme"
        />
    <TextView
        android:id="@+id/sex_selector_woman_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50_dp"
        android:text="@string/woman"
        android:gravity="center"
        android:textSize="@dimen/text_size_16_sp"
        android:textColor="@color/color_66"
        />





</LinearLayout>